--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".presentation.home.HomeActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.onboard.OnBoardActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
